Added Payment Page Functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/logos/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto Lease</title>
+    <script src="https://js.paystack.co/v2/inline.js"></script>
   </head>
   <body>
     <div id="root"></div>
